client: Create explicit remote and local commands